seaqt/QtWebEngineCore/gen_qwebenginequotarequest.h

class QMetaObject;
class QUrl;
class QWebEngineQuotaRequest;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWebEngineQuotaRequest QWebEngineQuotaRequest;
QWebEngineQuotaRequest* QWebEngineQuotaRequest_new();
QWebEngineQuotaRequest* QWebEngineQuotaRequest_new2(QWebEngineQuotaRequest* param1);
void QWebEngineQuotaRequest_accept(QWebEngineQuotaRequest* self);
void QWebEngineQuotaRequest_reject(QWebEngineQuotaRequest* self);
QUrl* QWebEngineQuotaRequest_origin(const QWebEngineQuotaRequest* self);
long long QWebEngineQuotaRequest_requestedSize(const QWebEngineQuotaRequest* self);
bool QWebEngineQuotaRequest_operatorEqual(const QWebEngineQuotaRequest* self, QWebEngineQuotaRequest* that);
bool QWebEngineQuotaRequest_operatorNotEqual(const QWebEngineQuotaRequest* self, QWebEngineQuotaRequest* that);
const QMetaObject* QWebEngineQuotaRequest_staticMetaObject();